--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,7 +102,8 @@ jobs:
         
         # 创建压缩包
         if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-          cd release-package && zip -r ../${{ matrix.artifact }}.zip . && cd ..
+          # Windows 使用 PowerShell 的 Compress-Archive
+          powershell -Command "Compress-Archive -Path release-package/* -DestinationPath ${{ matrix.artifact }}.zip"
         else
           tar -czf ${{ matrix.artifact }}.tar.gz -C release-package .
         fi
