--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ on:
       - 'v*'  # 当推送 v* 标签时触发
 
 jobs:
-  build-and-release:
-    name: Build and Release
+  build:
+    name: Build for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -66,16 +66,32 @@ jobs:
         if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
           # Windows 使用 PowerShell 的 Compress-Archive
           powershell -Command "Compress-Archive -Path release-package/* -DestinationPath ${{ matrix.artifact }}.zip"
-          echo "ASSET_PATH=${{ matrix.artifact }}.zip" >> $GITHUB_ENV
         else
           tar -czf ${{ matrix.artifact }}.tar.gz -C release-package .
-          echo "ASSET_PATH=${{ matrix.artifact }}.tar.gz" >> $GITHUB_ENV
         fi
     
-    - name: Release
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.artifact }}
+        path: ${{ matrix.artifact }}.*
+
+  release:
+    name: Create Release
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    
+    steps:
+    - name: Download all artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: artifacts
+    
+    - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        files: ${{ env.ASSET_PATH }}
+        files: artifacts/**/*
         body: |
           ## 🦕 恐龙游戏新版本发布！
           
