--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,20 @@ lto = true
 panic = "abort"
 codegen-units = 1
 strip = true
+
+# Windows 特定优化
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["winuser"] }
+
+# Windows 平台特定配置
+[target.'cfg(windows)'.profile.release]
+opt-level = 3
+lto = "fat"
+panic = "abort"
+codegen-units = 1
+strip = true
+debug = false
+
+# 启用更多优化
+[profile.release.package."*"]
+opt-level = 3
